# protocol-cosmwasm

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: Basic.yml
artifacts/: checksums_intermediate.txt
contracts/anchor/: Cargo.toml  README.md
contracts/anchor-handler/: Cargo.toml  README.md
contracts/anchor-handler/examples/: schema.rs
contracts/anchor-handler/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/anchor-handler/src/: contract.rs  state.rs  tests.rs
contracts/anchor/examples/: schema.rs
contracts/anchor/schema/: config_response.json  cw20_hook_msg.json  execute_msg.json  info_response.json  instantiate_msg.json  query_msg.json  withdraw_msg.json
contracts/anchor/src/: contract.rs  lib.rs  mock_querier.rs  msg.rs  state.rs  test_util.rs  tests.rs
contracts/anchor/tests/: cosmwasm_anchor copy.wasm  cosmwasm_anchor.wasm  integration.rs
contracts/mixer/: .gitignore  Cargo.toml
contracts/mixer/artifacts/: checksums.txt  cosmwasm_mixer.wasm
contracts/mixer/examples/: schema.rs
contracts/mixer/schema/: deposit_msg.json  execute_msg.json  instantiate_msg.json  merkle_tree.json  mixer.json  query_msg.json  withdraw_msg.json
contracts/mixer/src/: contract.rs  lib.rs  mixer_verifier.rs  poseidon.rs  state.rs  test_util.rs  tests.rs
contracts/mixer/tests/: cosmwasm_mixer.wasm  integration.rs
contracts/signature-bridge/: Cargo.toml  README.md
contracts/signature-bridge/examples/: schema.rs
contracts/signature-bridge/schema/: execute_msg.json  instantiate_msg.json  query_msg.json  state.json
contracts/signature-bridge/src/: contract.rs  lib.rs  state.rs  tests.rs
contracts/tokenwrapper/: Cargo.toml  NOTICE  README.md
contracts/tokenwrapper-handler/: Cargo.toml  README.md
contracts/tokenwrapper-handler/examples/: schema.rs
contracts/tokenwrapper-handler/src/: contract.rs  state.rs  tests.rs
contracts/tokenwrapper/examples/: schema.rs
contracts/tokenwrapper/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/tokenwrapper/src/: contract.rs  lib.rs  mock_querier.rs  state.rs  tests.rs  utils.rs
contracts/tokenwrapper/tests/: cosmwasm_tokenwrapper.wasm  integration.rs
contracts/treasury/: Cargo.toml  README.md
contracts/treasury-handler/: Cargo.toml  README.md
contracts/treasury-handler/examples/: schema.rs
contracts/treasury-handler/src/: contract.rs  lib.rs  state.rs  tests.rs
contracts/treasury/examples/: schema.rs
contracts/treasury/src/: contract.rs  state.rs  tests.rs
contracts/vanchor/: Cargo.toml  README.md
contracts/vanchor/examples/: schema.rs
contracts/vanchor/schema/: cw20_hook_msg.json  execute_msg.json  ext_data.json  instantiate_msg.json  proof_data.json  query_msg.json  update_config_msg.json
contracts/vanchor/src/: contract.rs  lib.rs  mock_querier.rs  state.rs  test_util.rs  tests.rs
contracts/vanchor/tests/: cosmwasm_vanchor.wasm  integration.rs
examples/: schema.rs
scripts/: package.json
scripts/src/: config.ts  index.ts  utils.ts
scripts/src/contracts/: CreateContract.ts  DeployContract.ts  ExecuteContract.ts  MigrateContract.ts  QueryContract.ts
scripts/src/scripts/: setupContracts.ts  testContracts.ts
src/: contract.rs  error.rs  lib.rs  mixer_verifier.rs  msg.rs  poseidon.rs  state.rs  test_util.rs  zeroes.rs
test-scripts/: README.md  package-lock.json  package.json  tsconfig.json
test-scripts/src/: config.ts  index.ts  utils.ts
test-scripts/src/config/: constants.ts  localjunoConstants.ts.example  wasmPaths.ts.example
test-scripts/src/config/wasms/: cosmwasm_anchor_handler.wasm  cosmwasm_signature_bridge.wasm  cosmwasm_tokenwrapper.wasm  cosmwasm_tokenwrapper_handler.wasm  counter.wasm  cw20_base.wasm  cw_erc20.wasm
test-scripts/src/environments/: localjuno.ts  testnet.ts
test-scripts/src/processes/migrate/: testnet.ts
test-scripts/src/processes/setup/: testnet.ts
test-scripts/src/processes/tests/: anchor.ts  mixer.ts  signatureBridge.ts  testnet.ts  tokenWrapper.ts  treasury.ts  vanchor.ts
test-scripts/src/scripts/: setupContracts.ts  testContracts.ts
test-scripts/src/utils/: helpers.ts
test-scripts/wasm_contracts/: cosmwasm_anchor.wasm
