[package]
name = "cosmwasm-anchor-handler"
version = "0.1.0"
authors = ["guorong <dudurong009@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.4"
cw2 = "0.13.4"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
getrandom = { version = "0.2", features = ["js"] }

protocol-cosmwasm = { version = "0.1.0", path = "../../packages/protocol_cosmwasm"}

[dev-dependencies]
cosmwasm-schema = "1.0.0"
